clang/test/BSC/Negative/Ownership/Owned/owned_struct/owned_struct_c.h
struct A {
    owned int a;  // expected-error {{unknown type name 'owned'}}
    owned int* b; // expected-error {{unknown type name 'owned'}}
};
